@@ -71,6 +71,15 @@ class DebugOperationTracerTest {
           return new OperationResult(20L, null);
         }
       };
+  private final Operation MSTORE_OPERATION =
+          new AbstractOperation(0x52, "MSTORE", 2, 0, null) {
+            @Override
+            public OperationResult execute(final MessageFrame frame, final EVM evm) {
+              // explicitMemoryUpdate=true simulates what MSTORE does in the real EVM
+              frame.writeMemory(0L, 32, WORD_2, true);
+              return new OperationResult(3L, null);
+            }
+          };
 
   private final CallOperation callOperation = new CallOperation(new CancunGasCalculator());
 
@@ -290,9 +299,7 @@ class DebugOperationTracerTest {
 
   @Test
   void shouldUseLastSnapshotInNonMemoryWriteOperation() {
-    final MessageFrame frame = validMessageFrameBuilder().build();
-    frame.writeMemory(0L, 32, WORD_1);
-
+    final MessageFrame frame = validMessageFrameWithInitiatedMemory(WORD_1);
     final DebugOperationTracer tracer = createDebugOperationTracerWithMemory();
 
     // Frame 0: non-memory-writing op — captures initial snapshot
@@ -302,7 +309,8 @@ class DebugOperationTracerTest {
 
     final List<TraceFrame> frames = tracer.getTraceFrames();
     assertThat(frames).hasSize(2);
-
+    assertThat(frames.get(0).getMemory()).isPresent();
+    assertThat(frames.get(1).getMemory()).isPresent();
     final Bytes[] frame0Memory = frames.get(0).getMemory().get();
     final Bytes[] frame1Memory = frames.get(1).getMemory().get();
 
@@ -313,27 +321,19 @@ class DebugOperationTracerTest {
 
   @Test
   void shouldTakeNewMemorySnapshotWhenMemorySizeGrowsWithoutExplicitWrite() {
-    // Safety-net check: even with no explicit-update flag and the same depth, if memory
-    // has grown between frames (e.g. expanded by a read touching a new page) the size guard
-    // lastFrame.getMemory().map(m -> m.length).orElse(0) == frame.memoryWordSize()
-    // must prevent stale snapshot reuse.
-
-    final MessageFrame frame = validMessageFrameBuilder().build();
-    frame.writeMemory(0L, 32, WORD_1); // 1 word
-
+    final MessageFrame frame = validMessageFrameWithInitiatedMemory(WORD_1);
     final DebugOperationTracer tracer = createDebugOperationTracerWithMemory();
 
-    // Frame 0: 1 word in memory
     traceFrame(frame, tracer, anOperation);
 
-    // Memory grows to 2 words without an explicit-update flag (simulates e.g. MLOAD
-    // touching a new page, which expands memory but does not set the flag)
-    frame.writeMemory(32L, 32, WORD_2); // now 2 words, no explicit-update flag
+    frame.writeMemory(32L, 32, WORD_2);
     traceFrame(frame, tracer, anOperation);
 
     final List<TraceFrame> frames = tracer.getTraceFrames();
     assertThat(frames).hasSize(2);
 
+    assertThat(frames.get(0).getMemory()).isPresent();
+    assertThat(frames.get(1).getMemory()).isPresent();
     final Bytes[] snapshot0 = frames.get(0).getMemory().get();
     final Bytes[] snapshot1 = frames.get(1).getMemory().get();
 
@@ -347,35 +347,20 @@ class DebugOperationTracerTest {
 
   @Test
   void shouldTakeNewMemorySnapshotAfterExplicitMemoryWrite() {
-    final Operation memoryWritingOp =
-        new AbstractOperation(0x52, "MSTORE", 2, 0, null) {
-          @Override
-          public OperationResult execute(final MessageFrame frame, final EVM evm) {
-            // explicitMemoryUpdate=true simulates what MSTORE does in the real EVM
-            frame.writeMemory(0L, 32, WORD_2, true);
-            return new OperationResult(3L, null);
-          }
-        };
-
-    final MessageFrame frame = validMessageFrameBuilder().build();
-    frame.writeMemory(0L, 32, WORD_1);
-
+    final MessageFrame frame = validMessageFrameWithInitiatedMemory(WORD_1);
     final DebugOperationTracer tracer = createDebugOperationTracerWithMemory();
 
-    // Frame 0: non-memory-writing op
     traceFrame(frame, tracer, anOperation);
-
-    // Frame 1: memory-writing op
-    frame.setCurrentOperation(memoryWritingOp);
-    traceFrame(frame, tracer, memoryWritingOp);
+    traceFrame(frame, tracer, MSTORE_OPERATION);
 
     final List<TraceFrame> frames = tracer.getTraceFrames();
     assertThat(frames).hasSize(2);
+    assertThat(frames.get(0).getMemory()).isPresent();
+    assertThat(frames.get(1).getMemory()).isPresent();
 
     final Bytes[] before = frames.get(0).getMemory().get();
     final Bytes[] after = frames.get(1).getMemory().get();
 
-    // A memory write must produce a distinct snapshot with updated content
     assertThat(after)
         .as("After a memory-writing opcode, a new memory snapshot must be taken")
         .isNotSameAs(before);
@@ -385,64 +370,44 @@ class DebugOperationTracerTest {
 
   @Test
   void shouldCaptureMemoryDirectlyWhenLastFrameIsNull() {
-    // captureMemory is invoked with lastFrame == null (first trace ever).
-    // The early-return path (reuse lastFrame.getMemory()) must be skipped and
-    // memory must be read fresh from the frame even when getMaybeUpdatedMemory() is empty.
-    final MessageFrame frame = validMessageFrameBuilder().build();
-    frame.writeMemory(0L, 32, WORD_1); // no explicit-update flag → getMaybeUpdatedMemory() is empty
-
+    final MessageFrame frame = validMessageFrameWithInitiatedMemory(WORD_1);
     final DebugOperationTracer tracer = createDebugOperationTracerWithMemory();
     traceFrame(frame, tracer, anOperation);
 
     final List<TraceFrame> frames = tracer.getTraceFrames();
     assertThat(frames).hasSize(1);
-    assertThat(frames.get(0).getMemory()).isPresent();
-    assertThat(frames.get(0).getMemory().get()).containsExactly(WORD_1);
+    assertThat(frames.getFirst().getMemory()).isPresent();
+    assertThat(frames.getFirst().getMemory().get()).containsExactly(WORD_1);
   }
 
   @Test
   void shouldHandleCallReturnScenario() {
-    // Full CALL/RETURN lifecycle: parent (depth 0) → child (depth 1) → parent (depth 0).
-    //
-    // Any depth change — whether entering a CALL (0→1) or returning from one (1→0) —
-    // must trigger a fresh memory snapshot, because lastFrame.depth != frame.depth.
-    // This prevents both cross-frame snapshot reuse and child-memory leaking into the parent.
     final DebugOperationTracer tracer = createDebugOperationTracerWithMemory();
-
-    // --- Step 1: parent frame before CALL (depth 0) ---
-    final MessageFrame parentFrame = validMessageFrameBuilder().build();
-    parentFrame.writeMemory(0L, 32, WORD_1);
-    parentFrame.setCurrentOperation(anOperation);
+    final MessageFrame parentFrame = validMessageFrameWithInitiatedMemory(WORD_1);
 
     traceFrame(parentFrame, tracer, anOperation);
 
-    // --- Step 2: child frame during CALL (depth 1) ---
-    // lastFrame.depth(0) != frame.depth(1) → fresh snapshot must be taken from the child
-    final MessageFrame childFrame = validMessageFrameBuilder().build();
-    childFrame.writeMemory(0L, 32, WORD_2);
-    childFrame.getMessageFrameStack().add(childFrame); // raises depth to 1
+    final MessageFrame childFrame = validMessageFrameWithInitiatedMemory(WORD_2);
+    childFrame.getMessageFrameStack().add(childFrame);
 
     traceFrame(childFrame, tracer, anOperation);
-
-    // --- Step 3: parent frame resumes after RETURN (depth 0) ---
-    // getMaybeUpdatedMemory() is empty (reset() cleared it after step 1),
-    // lastFrame.depth(1) != frame.depth(0) → fresh snapshot must be read from parentFrame
     traceFrame(parentFrame, tracer, anOperation);
 
     final List<TraceFrame> frames = tracer.getTraceFrames();
     assertThat(frames).hasSize(3);
+    assertThat(frames.get(0).getMemory()).isPresent();
+    assertThat(frames.get(1).getMemory()).isPresent();
+    assertThat(frames.get(2).getMemory()).isPresent();
 
     final Bytes[] parentSnapshot = frames.get(0).getMemory().get();
     final Bytes[] childSnapshot = frames.get(1).getMemory().get();
     final Bytes[] parentAfterReturn = frames.get(2).getMemory().get();
 
-    // On CALL entry (depth 0→1): child must get its own fresh snapshot, not reuse parent's
     assertThat(childSnapshot)
         .as("On CALL entry, child must get a fresh snapshot — not reuse the parent's")
         .isNotSameAs(parentSnapshot);
     assertThat(childSnapshot[0]).isEqualTo(WORD_2);
 
-    // After RETURN (depth 1→0): parent memory must be freshly captured, not the child's snapshot
     assertThat(parentAfterReturn)
         .as("After RETURN, parent memory must be freshly captured — not the child's snapshot")
         .isNotSameAs(childSnapshot);
@@ -512,6 +477,13 @@ class DebugOperationTracerTest {
         .gasPrice(Wei.of(25))
         .blockHeader(blockHeader)
         .blockchain(blockchain);
+  }
+
+  private MessageFrame validMessageFrameWithInitiatedMemory(Bytes32 initiatedMemory) {
+    final MessageFrame frame = validMessageFrameBuilder().build();
+    frame.writeMemory(0L, 32, initiatedMemory);
+
+    return frame;
   }
 
   private Map<UInt256, UInt256> setupStorageForCapture(final MessageFrame frame) {
